SRL-555: correct modal visibility for mobile plus 2/3 scroll visibility

--- a/source/_patterns/03-organisms/sections/drawer/_drawer.scss
+++ b/source/_patterns/03-organisms/sections/drawer/_drawer.scss
@@ -48,7 +48,6 @@
       }
     }
 
-    .jcc-feedback,
     .block {
       @include grid-col(6);
       @include at-media("desktop") {
